Fix horizontal alignment on table headers

--- a/src/themes/hugo-theme-learn/_src/sass/_theme.scss
+++ b/src/themes/hugo-theme-learn/_src/sass/_theme.scss
@@ -590,6 +590,14 @@ th {
   background: #f7f7f7;
   padding: 0.5rem .8rem;
   font-size: 1.1em;
+
+  &[align="center"] {
+    text-align: center;
+  }
+
+  &[align="right"] {
+    text-align: right;
+  }
 }
 
 td {
